// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`regexp parser works for (?:a)+? 1`] = `
"{
  'start': 0,
  'end': 7,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 8,
  'symbol': 'Regexp',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 7,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 8,
      'symbol': 'Expression',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 7,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 8,
          'symbol': 'SubExpression',
          'type': 'symbol',
          'children': [
            {
              'start': 0,
              'end': 7,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 1,
              'lastColumn': 8,
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'children': [
                {
                  'start': 0,
                  'end': 7,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 1,
                  'lastColumn': 8,
                  'symbol': 'Group',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 0,
                      'end': 1,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 1,
                      'lastColumn': 2,
                      'token': '(',
                      'type': 'token',
                      'text': '('
                    },
                    {
                      'start': 1,
                      'end': 3,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 2,
                      'lastColumn': 4,
                      'token': '?:',
                      'type': 'token',
                      'text': '?:'
                    },
                    {
                      'start': 3,
                      'end': 4,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 4,
                      'lastColumn': 5,
                      'symbol': 'Expression',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 3,
                          'end': 4,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 4,
                          'lastColumn': 5,
                          'symbol': 'SubExpression',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 3,
                              'end': 4,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 4,
                              'lastColumn': 5,
                              'symbol': 'ExpressionItem',
                              'type': 'symbol',
                              'children': [
                                {
                                  'start': 3,
                                  'end': 4,
                                  'firstLine': 1,
                                  'lastLine': 1,
                                  'firstColumn': 4,
                                  'lastColumn': 5,
                                  'symbol': 'Match',
                                  'type': 'symbol',
                                  'children': [
                                    {
                                      'start': 3,
                                      'end': 4,
                                      'firstLine': 1,
                                      'lastLine': 1,
                                      'firstColumn': 4,
                                      'lastColumn': 5,
                                      'symbol': 'MatchItem',
                                      'type': 'symbol',
                                      'children': [
                                        {
                                          'start': 3,
                                          'end': 4,
                                          'firstLine': 1,
                                          'lastLine': 1,
                                          'firstColumn': 4,
                                          'lastColumn': 5,
                                          'token': 'char',
                                          'type': 'token',
                                          'text': 'a'
                                        }
                                      ],
                                      'ruleIndex': 17,
                                      'internalRuleIndex': 30,
                                      'id': 11
                                    }
                                  ],
                                  'ruleIndex': 16,
                                  'internalRuleIndex': 27,
                                  'id': 10
                                }
                              ],
                              'ruleIndex': 6,
                              'internalRuleIndex': 11,
                              'id': 9
                            }
                          ],
                          'ruleIndex': 5,
                          'internalRuleIndex': 10,
                          'id': 8
                        }
                      ],
                      'ruleIndex': 3,
                      'internalRuleIndex': 6,
                      'id': 7
                    },
                    {
                      'start': 4,
                      'end': 5,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 5,
                      'lastColumn': 6,
                      'token': ')',
                      'type': 'token',
                      'text': ')'
                    },
                    {
                      'start': 5,
                      'end': 7,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 6,
                      'lastColumn': 8,
                      'symbol': 'Quantifier',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 5,
                          'end': 6,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 6,
                          'lastColumn': 7,
                          'symbol': 'QuantifierType',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 5,
                              'end': 6,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 6,
                              'lastColumn': 7,
                              'token': '+',
                              'type': 'token',
                              'text': '+'
                            }
                          ],
                          'ruleIndex': 40,
                          'internalRuleIndex': 55,
                          'id': 13
                        },
                        {
                          'start': 6,
                          'end': 7,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 7,
                          'lastColumn': 8,
                          'token': 'OPTIONAL',
                          'type': 'token',
                          'text': '?'
                        }
                      ],
                      'ruleIndex': 38,
                      'internalRuleIndex': 53,
                      'id': 12
                    }
                  ],
                  'ruleIndex': 8,
                  'internalRuleIndex': 15,
                  'id': 6
                }
              ],
              'ruleIndex': 7,
              'internalRuleIndex': 12,
              'id': 5
            }
          ],
          'ruleIndex': 5,
          'internalRuleIndex': 10,
          'id': 4
        }
      ],
      'ruleIndex': 3,
      'internalRuleIndex': 6,
      'id': 3
    }
  ],
  'ruleIndex': 1,
  'internalRuleIndex': 2,
  'id': 2
}"
`;

exports[`regexp parser works for (?<a>c)b 1`] = `
"{
  'start': 0,
  'end': 8,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 9,
  'symbol': 'Regexp',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 8,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 9,
      'symbol': 'Expression',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 8,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 9,
          'symbol': 'SubExpression',
          'type': 'symbol',
          'children': [
            {
              'start': 0,
              'end': 7,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 1,
              'lastColumn': 8,
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'children': [
                {
                  'start': 0,
                  'end': 7,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 1,
                  'lastColumn': 8,
                  'symbol': 'Group',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 0,
                      'end': 5,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 1,
                      'lastColumn': 6,
                      'token': 'namedGroupPrefix',
                      'type': 'token',
                      'text': 'a'
                    },
                    {
                      'start': 5,
                      'end': 6,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 6,
                      'lastColumn': 7,
                      'symbol': 'Expression',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 5,
                          'end': 6,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 6,
                          'lastColumn': 7,
                          'symbol': 'SubExpression',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 5,
                              'end': 6,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 6,
                              'lastColumn': 7,
                              'symbol': 'ExpressionItem',
                              'type': 'symbol',
                              'children': [
                                {
                                  'start': 5,
                                  'end': 6,
                                  'firstLine': 1,
                                  'lastLine': 1,
                                  'firstColumn': 6,
                                  'lastColumn': 7,
                                  'symbol': 'Match',
                                  'type': 'symbol',
                                  'children': [
                                    {
                                      'start': 5,
                                      'end': 6,
                                      'firstLine': 1,
                                      'lastLine': 1,
                                      'firstColumn': 6,
                                      'lastColumn': 7,
                                      'symbol': 'MatchItem',
                                      'type': 'symbol',
                                      'children': [
                                        {
                                          'start': 5,
                                          'end': 6,
                                          'firstLine': 1,
                                          'lastLine': 1,
                                          'firstColumn': 6,
                                          'lastColumn': 7,
                                          'token': 'char',
                                          'type': 'token',
                                          'text': 'c'
                                        }
                                      ],
                                      'ruleIndex': 17,
                                      'internalRuleIndex': 30,
                                      'id': 11
                                    }
                                  ],
                                  'ruleIndex': 16,
                                  'internalRuleIndex': 27,
                                  'id': 10
                                }
                              ],
                              'ruleIndex': 6,
                              'internalRuleIndex': 11,
                              'id': 9
                            }
                          ],
                          'ruleIndex': 5,
                          'internalRuleIndex': 10,
                          'id': 8
                        }
                      ],
                      'ruleIndex': 3,
                      'internalRuleIndex': 6,
                      'id': 7
                    },
                    {
                      'start': 6,
                      'end': 7,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 7,
                      'lastColumn': 8,
                      'token': ')',
                      'type': 'token',
                      'text': ')'
                    }
                  ],
                  'ruleIndex': 9,
                  'internalRuleIndex': 18,
                  'id': 6
                }
              ],
              'ruleIndex': 7,
              'internalRuleIndex': 12,
              'id': 5
            },
            {
              'start': 7,
              'end': 8,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 8,
              'lastColumn': 9,
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'children': [
                {
                  'start': 7,
                  'end': 8,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 8,
                  'lastColumn': 9,
                  'symbol': 'Match',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 7,
                      'end': 8,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 8,
                      'lastColumn': 9,
                      'symbol': 'MatchItem',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 7,
                          'end': 8,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 8,
                          'lastColumn': 9,
                          'token': 'char',
                          'type': 'token',
                          'text': 'b'
                        }
                      ],
                      'ruleIndex': 17,
                      'internalRuleIndex': 30,
                      'id': 14
                    }
                  ],
                  'ruleIndex': 16,
                  'internalRuleIndex': 27,
                  'id': 13
                }
              ],
              'ruleIndex': 6,
              'internalRuleIndex': 11,
              'id': 12
            }
          ],
          'ruleIndex': 5,
          'internalRuleIndex': 10,
          'id': 4
        }
      ],
      'ruleIndex': 3,
      'internalRuleIndex': 6,
      'id': 3
    }
  ],
  'ruleIndex': 1,
  'internalRuleIndex': 2,
  'id': 2
}"
`;

exports[`regexp parser works for (a|b)*z 1`] = `
"{
  'start': 0,
  'end': 7,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 8,
  'symbol': 'Regexp',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 7,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 8,
      'symbol': 'Expression',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 7,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 8,
          'symbol': 'SubExpression',
          'type': 'symbol',
          'children': [
            {
              'start': 0,
              'end': 6,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 1,
              'lastColumn': 7,
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'children': [
                {
                  'start': 0,
                  'end': 6,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 1,
                  'lastColumn': 7,
                  'symbol': 'Group',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 0,
                      'end': 1,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 1,
                      'lastColumn': 2,
                      'token': '(',
                      'type': 'token',
                      'text': '('
                    },
                    {
                      'start': 1,
                      'end': 4,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 2,
                      'lastColumn': 5,
                      'symbol': 'Expression',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 1,
                          'end': 2,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 2,
                          'lastColumn': 3,
                          'symbol': 'SubExpression',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 1,
                              'end': 2,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 2,
                              'lastColumn': 3,
                              'symbol': 'ExpressionItem',
                              'type': 'symbol',
                              'children': [
                                {
                                  'start': 1,
                                  'end': 2,
                                  'firstLine': 1,
                                  'lastLine': 1,
                                  'firstColumn': 2,
                                  'lastColumn': 3,
                                  'symbol': 'Match',
                                  'type': 'symbol',
                                  'children': [
                                    {
                                      'start': 1,
                                      'end': 2,
                                      'firstLine': 1,
                                      'lastLine': 1,
                                      'firstColumn': 2,
                                      'lastColumn': 3,
                                      'symbol': 'MatchItem',
                                      'type': 'symbol',
                                      'children': [
                                        {
                                          'start': 1,
                                          'end': 2,
                                          'firstLine': 1,
                                          'lastLine': 1,
                                          'firstColumn': 2,
                                          'lastColumn': 3,
                                          'token': 'char',
                                          'type': 'token',
                                          'text': 'a'
                                        }
                                      ],
                                      'ruleIndex': 17,
                                      'internalRuleIndex': 30,
                                      'id': 11
                                    }
                                  ],
                                  'ruleIndex': 16,
                                  'internalRuleIndex': 27,
                                  'id': 10
                                }
                              ],
                              'ruleIndex': 6,
                              'internalRuleIndex': 11,
                              'id': 9
                            }
                          ],
                          'ruleIndex': 5,
                          'internalRuleIndex': 10,
                          'id': 8
                        },
                        {
                          'start': 2,
                          'end': 3,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 3,
                          'lastColumn': 4,
                          'token': '|',
                          'type': 'token',
                          'text': '|'
                        },
                        {
                          'start': 3,
                          'end': 4,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 4,
                          'lastColumn': 5,
                          'symbol': 'SubExpression',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 3,
                              'end': 4,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 4,
                              'lastColumn': 5,
                              'symbol': 'ExpressionItem',
                              'type': 'symbol',
                              'children': [
                                {
                                  'start': 3,
                                  'end': 4,
                                  'firstLine': 1,
                                  'lastLine': 1,
                                  'firstColumn': 4,
                                  'lastColumn': 5,
                                  'symbol': 'Match',
                                  'type': 'symbol',
                                  'children': [
                                    {
                                      'start': 3,
                                      'end': 4,
                                      'firstLine': 1,
                                      'lastLine': 1,
                                      'firstColumn': 4,
                                      'lastColumn': 5,
                                      'symbol': 'MatchItem',
                                      'type': 'symbol',
                                      'children': [
                                        {
                                          'start': 3,
                                          'end': 4,
                                          'firstLine': 1,
                                          'lastLine': 1,
                                          'firstColumn': 4,
                                          'lastColumn': 5,
                                          'token': 'char',
                                          'type': 'token',
                                          'text': 'b'
                                        }
                                      ],
                                      'ruleIndex': 17,
                                      'internalRuleIndex': 30,
                                      'id': 15
                                    }
                                  ],
                                  'ruleIndex': 16,
                                  'internalRuleIndex': 27,
                                  'id': 14
                                }
                              ],
                              'ruleIndex': 6,
                              'internalRuleIndex': 11,
                              'id': 13
                            }
                          ],
                          'ruleIndex': 5,
                          'internalRuleIndex': 10,
                          'id': 12
                        }
                      ],
                      'ruleIndex': 3,
                      'internalRuleIndex': 6,
                      'id': 7
                    },
                    {
                      'start': 4,
                      'end': 5,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 5,
                      'lastColumn': 6,
                      'token': ')',
                      'type': 'token',
                      'text': ')'
                    },
                    {
                      'start': 5,
                      'end': 6,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 6,
                      'lastColumn': 7,
                      'symbol': 'Quantifier',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 5,
                          'end': 6,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 6,
                          'lastColumn': 7,
                          'symbol': 'QuantifierType',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 5,
                              'end': 6,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 6,
                              'lastColumn': 7,
                              'token': '*',
                              'type': 'token',
                              'text': '*'
                            }
                          ],
                          'ruleIndex': 39,
                          'internalRuleIndex': 54,
                          'id': 17
                        }
                      ],
                      'ruleIndex': 38,
                      'internalRuleIndex': 53,
                      'id': 16
                    }
                  ],
                  'ruleIndex': 8,
                  'internalRuleIndex': 15,
                  'id': 6
                }
              ],
              'ruleIndex': 7,
              'internalRuleIndex': 12,
              'id': 5
            },
            {
              'start': 6,
              'end': 7,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 7,
              'lastColumn': 8,
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'children': [
                {
                  'start': 6,
                  'end': 7,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 7,
                  'lastColumn': 8,
                  'symbol': 'Match',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 6,
                      'end': 7,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 7,
                      'lastColumn': 8,
                      'symbol': 'MatchItem',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 6,
                          'end': 7,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 7,
                          'lastColumn': 8,
                          'token': 'char',
                          'type': 'token',
                          'text': 'z'
                        }
                      ],
                      'ruleIndex': 17,
                      'internalRuleIndex': 30,
                      'id': 20
                    }
                  ],
                  'ruleIndex': 16,
                  'internalRuleIndex': 27,
                  'id': 19
                }
              ],
              'ruleIndex': 6,
              'internalRuleIndex': 11,
              'id': 18
            }
          ],
          'ruleIndex': 5,
          'internalRuleIndex': 10,
          'id': 4
        }
      ],
      'ruleIndex': 3,
      'internalRuleIndex': 6,
      'id': 3
    }
  ],
  'ruleIndex': 1,
  'internalRuleIndex': 2,
  'id': 2
}"
`;

exports[`regexp parser works for [^a-z] 1`] = `
"{
  'start': 0,
  'end': 6,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 7,
  'symbol': 'Regexp',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 6,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 7,
      'symbol': 'Expression',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 6,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 7,
          'symbol': 'SubExpression',
          'type': 'symbol',
          'children': [
            {
              'start': 0,
              'end': 6,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 1,
              'lastColumn': 7,
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'children': [
                {
                  'start': 0,
                  'end': 6,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 1,
                  'lastColumn': 7,
                  'symbol': 'Match',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 0,
                      'end': 6,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 1,
                      'lastColumn': 7,
                      'symbol': 'MatchItem',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 0,
                          'end': 6,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 1,
                          'lastColumn': 7,
                          'symbol': 'MatchCharacterClass',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 0,
                              'end': 6,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 1,
                              'lastColumn': 7,
                              'symbol': 'CharacterGroup',
                              'type': 'symbol',
                              'children': [
                                {
                                  'start': 0,
                                  'end': 1,
                                  'firstLine': 1,
                                  'lastLine': 1,
                                  'firstColumn': 1,
                                  'lastColumn': 2,
                                  'token': '[',
                                  'type': 'token',
                                  'text': '['
                                },
                                {
                                  'start': 1,
                                  'end': 2,
                                  'firstLine': 1,
                                  'lastLine': 1,
                                  'firstColumn': 2,
                                  'lastColumn': 3,
                                  'token': '^',
                                  'type': 'token',
                                  'text': '^'
                                },
                                {
                                  'start': 2,
                                  'end': 5,
                                  'firstLine': 1,
                                  'lastLine': 1,
                                  'firstColumn': 3,
                                  'lastColumn': 6,
                                  'symbol': 'CharacterGroupInner',
                                  'type': 'symbol',
                                  'children': [
                                    {
                                      'start': 2,
                                      'end': 5,
                                      'firstLine': 1,
                                      'lastLine': 1,
                                      'firstColumn': 3,
                                      'lastColumn': 6,
                                      'symbol': 'CharacterGroupItem',
                                      'type': 'symbol',
                                      'children': [
                                        {
                                          'start': 2,
                                          'end': 5,
                                          'firstLine': 1,
                                          'lastLine': 1,
                                          'firstColumn': 3,
                                          'lastColumn': 6,
                                          'symbol': 'CharacterRange',
                                          'type': 'symbol',
                                          'children': [
                                            {
                                              'start': 2,
                                              'end': 3,
                                              'firstLine': 1,
                                              'lastLine': 1,
                                              'firstColumn': 3,
                                              'lastColumn': 4,
                                              'token': 'char',
                                              'type': 'token',
                                              'text': 'a'
                                            },
                                            {
                                              'start': 3,
                                              'end': 4,
                                              'firstLine': 1,
                                              'lastLine': 1,
                                              'firstColumn': 4,
                                              'lastColumn': 5,
                                              'token': '-',
                                              'type': 'token',
                                              'text': '-'
                                            },
                                            {
                                              'start': 4,
                                              'end': 5,
                                              'firstLine': 1,
                                              'lastLine': 1,
                                              'firstColumn': 5,
                                              'lastColumn': 6,
                                              'token': 'char',
                                              'type': 'token',
                                              'text': 'z'
                                            }
                                          ],
                                          'ruleIndex': 35,
                                          'internalRuleIndex': 50,
                                          'id': 12
                                        }
                                      ],
                                      'ruleIndex': 28,
                                      'internalRuleIndex': 41,
                                      'id': 11
                                    }
                                  ],
                                  'ruleIndex': 26,
                                  'internalRuleIndex': 39,
                                  'id': 10
                                },
                                {
                                  'start': 5,
                                  'end': 6,
                                  'firstLine': 1,
                                  'lastLine': 1,
                                  'firstColumn': 6,
                                  'lastColumn': 7,
                                  'token': ']',
                                  'type': 'token',
                                  'text': ']'
                                }
                              ],
                              'ruleIndex': 22,
                              'internalRuleIndex': 35,
                              'id': 9
                            }
                          ],
                          'ruleIndex': 18,
                          'internalRuleIndex': 31,
                          'id': 8
                        }
                      ],
                      'ruleIndex': 17,
                      'internalRuleIndex': 29,
                      'id': 7
                    }
                  ],
                  'ruleIndex': 16,
                  'internalRuleIndex': 27,
                  'id': 6
                }
              ],
              'ruleIndex': 6,
              'internalRuleIndex': 11,
              'id': 5
            }
          ],
          'ruleIndex': 5,
          'internalRuleIndex': 10,
          'id': 4
        }
      ],
      'ruleIndex': 3,
      'internalRuleIndex': 6,
      'id': 3
    }
  ],
  'ruleIndex': 1,
  'internalRuleIndex': 2,
  'id': 2
}"
`;

exports[`regexp parser works for [a-z] 1`] = `
"{
  'start': 0,
  'end': 6,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 7,
  'symbol': 'Regexp',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 6,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 7,
      'symbol': 'Expression',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 6,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 7,
          'symbol': 'SubExpression',
          'type': 'symbol',
          'children': [
            {
              'start': 0,
              'end': 6,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 1,
              'lastColumn': 7,
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'children': [
                {
                  'start': 0,
                  'end': 6,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 1,
                  'lastColumn': 7,
                  'symbol': 'Match',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 0,
                      'end': 6,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 1,
                      'lastColumn': 7,
                      'symbol': 'MatchItem',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 0,
                          'end': 6,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 1,
                          'lastColumn': 7,
                          'symbol': 'MatchCharacterClass',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 0,
                              'end': 6,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 1,
                              'lastColumn': 7,
                              'symbol': 'CharacterGroup',
                              'type': 'symbol',
                              'children': [
                                {
                                  'start': 0,
                                  'end': 1,
                                  'firstLine': 1,
                                  'lastLine': 1,
                                  'firstColumn': 1,
                                  'lastColumn': 2,
                                  'token': '[',
                                  'type': 'token',
                                  'text': '['
                                },
                                {
                                  'start': 1,
                                  'end': 5,
                                  'firstLine': 1,
                                  'lastLine': 1,
                                  'firstColumn': 2,
                                  'lastColumn': 6,
                                  'symbol': 'CharacterGroupInner',
                                  'type': 'symbol',
                                  'children': [
                                    {
                                      'start': 1,
                                      'end': 4,
                                      'firstLine': 1,
                                      'lastLine': 1,
                                      'firstColumn': 2,
                                      'lastColumn': 5,
                                      'symbol': 'CharacterGroupItem',
                                      'type': 'symbol',
                                      'children': [
                                        {
                                          'start': 1,
                                          'end': 4,
                                          'firstLine': 1,
                                          'lastLine': 1,
                                          'firstColumn': 2,
                                          'lastColumn': 5,
                                          'symbol': 'CharacterRange',
                                          'type': 'symbol',
                                          'children': [
                                            {
                                              'start': 1,
                                              'end': 2,
                                              'firstLine': 1,
                                              'lastLine': 1,
                                              'firstColumn': 2,
                                              'lastColumn': 3,
                                              'token': 'char',
                                              'type': 'token',
                                              'text': 'a'
                                            },
                                            {
                                              'start': 2,
                                              'end': 3,
                                              'firstLine': 1,
                                              'lastLine': 1,
                                              'firstColumn': 3,
                                              'lastColumn': 4,
                                              'token': '-',
                                              'type': 'token',
                                              'text': '-'
                                            },
                                            {
                                              'start': 3,
                                              'end': 4,
                                              'firstLine': 1,
                                              'lastLine': 1,
                                              'firstColumn': 4,
                                              'lastColumn': 5,
                                              'token': 'char',
                                              'type': 'token',
                                              'text': 'z'
                                            }
                                          ],
                                          'ruleIndex': 35,
                                          'internalRuleIndex': 50,
                                          'id': 12
                                        }
                                      ],
                                      'ruleIndex': 28,
                                      'internalRuleIndex': 41,
                                      'id': 11
                                    },
                                    {
                                      'start': 4,
                                      'end': 5,
                                      'firstLine': 1,
                                      'lastLine': 1,
                                      'firstColumn': 5,
                                      'lastColumn': 6,
                                      'symbol': 'CharacterGroupItem',
                                      'type': 'symbol',
                                      'children': [
                                        {
                                          'start': 4,
                                          'end': 5,
                                          'firstLine': 1,
                                          'lastLine': 1,
                                          'firstColumn': 5,
                                          'lastColumn': 6,
                                          'symbol': 'CharacterRange',
                                          'type': 'symbol',
                                          'children': [
                                            {
                                              'start': 4,
                                              'end': 5,
                                              'firstLine': 1,
                                              'lastLine': 1,
                                              'firstColumn': 5,
                                              'lastColumn': 6,
                                              'token': 'char',
                                              'type': 'token',
                                              'text': '\\\\b'
                                            }
                                          ],
                                          'ruleIndex': 35,
                                          'internalRuleIndex': 50,
                                          'id': 14
                                        }
                                      ],
                                      'ruleIndex': 28,
                                      'internalRuleIndex': 41,
                                      'id': 13
                                    }
                                  ],
                                  'ruleIndex': 26,
                                  'internalRuleIndex': 39,
                                  'id': 10
                                },
                                {
                                  'start': 5,
                                  'end': 6,
                                  'firstLine': 1,
                                  'lastLine': 1,
                                  'firstColumn': 6,
                                  'lastColumn': 7,
                                  'token': ']',
                                  'type': 'token',
                                  'text': ']'
                                }
                              ],
                              'ruleIndex': 22,
                              'internalRuleIndex': 35,
                              'id': 9
                            }
                          ],
                          'ruleIndex': 18,
                          'internalRuleIndex': 31,
                          'id': 8
                        }
                      ],
                      'ruleIndex': 17,
                      'internalRuleIndex': 29,
                      'id': 7
                    }
                  ],
                  'ruleIndex': 16,
                  'internalRuleIndex': 27,
                  'id': 6
                }
              ],
              'ruleIndex': 6,
              'internalRuleIndex': 11,
              'id': 5
            }
          ],
          'ruleIndex': 5,
          'internalRuleIndex': 10,
          'id': 4
        }
      ],
      'ruleIndex': 3,
      'internalRuleIndex': 6,
      'id': 3
    }
  ],
  'ruleIndex': 1,
  'internalRuleIndex': 2,
  'id': 2
}"
`;

exports[`regexp parser works for \\12\\b 1`] = `
"{
  'start': 0,
  'end': 5,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 6,
  'symbol': 'Regexp',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 5,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 6,
      'symbol': 'Expression',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 5,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 6,
          'symbol': 'SubExpression',
          'type': 'symbol',
          'children': [
            {
              'start': 0,
              'end': 3,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 1,
              'lastColumn': 4,
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'children': [
                {
                  'start': 0,
                  'end': 3,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 1,
                  'lastColumn': 4,
                  'token': 'backreference',
                  'type': 'token',
                  'text': '\\\\\\\\12'
                }
              ],
              'ruleIndex': 8,
              'internalRuleIndex': 14,
              'id': 5
            },
            {
              'start': 3,
              'end': 5,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 4,
              'lastColumn': 6,
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'children': [
                {
                  'start': 3,
                  'end': 5,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 4,
                  'lastColumn': 6,
                  'symbol': 'Anchor',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 3,
                      'end': 5,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 4,
                      'lastColumn': 6,
                      'token': 'anchorWordBoundary',
                      'type': 'token',
                      'text': '\\\\\\\\b'
                    }
                  ],
                  'internalRuleIndex': 62,
                  'id': 7
                }
              ],
              'ruleIndex': 8,
              'internalRuleIndex': 13,
              'id': 6
            }
          ],
          'ruleIndex': 5,
          'internalRuleIndex': 10,
          'id': 4
        }
      ],
      'ruleIndex': 3,
      'internalRuleIndex': 6,
      'id': 3
    }
  ],
  'ruleIndex': 1,
  'internalRuleIndex': 2,
  'id': 2
}"
`;

exports[`regexp parser works for ^a+z$ 1`] = `
"{
  'start': 0,
  'end': 5,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 6,
  'symbol': 'Regexp',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 1,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 2,
      'token': '^',
      'type': 'token',
      'text': '^'
    },
    {
      'start': 1,
      'end': 5,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 2,
      'lastColumn': 6,
      'symbol': 'Expression',
      'type': 'symbol',
      'children': [
        {
          'start': 1,
          'end': 5,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 2,
          'lastColumn': 6,
          'symbol': 'SubExpression',
          'type': 'symbol',
          'children': [
            {
              'start': 1,
              'end': 3,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 2,
              'lastColumn': 4,
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'children': [
                {
                  'start': 1,
                  'end': 3,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 2,
                  'lastColumn': 4,
                  'symbol': 'Match',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 1,
                      'end': 2,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 2,
                      'lastColumn': 3,
                      'symbol': 'MatchItem',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 1,
                          'end': 2,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 2,
                          'lastColumn': 3,
                          'token': 'char',
                          'type': 'token',
                          'text': 'a'
                        }
                      ],
                      'ruleIndex': 17,
                      'internalRuleIndex': 30,
                      'id': 7
                    },
                    {
                      'start': 2,
                      'end': 3,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 3,
                      'lastColumn': 4,
                      'symbol': 'Quantifier',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 2,
                          'end': 3,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 3,
                          'lastColumn': 4,
                          'symbol': 'QuantifierType',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 2,
                              'end': 3,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 3,
                              'lastColumn': 4,
                              'token': '+',
                              'type': 'token',
                              'text': '+'
                            }
                          ],
                          'ruleIndex': 40,
                          'internalRuleIndex': 55,
                          'id': 9
                        }
                      ],
                      'ruleIndex': 38,
                      'internalRuleIndex': 53,
                      'id': 8
                    }
                  ],
                  'ruleIndex': 16,
                  'internalRuleIndex': 27,
                  'id': 6
                }
              ],
              'ruleIndex': 6,
              'internalRuleIndex': 11,
              'id': 5
            },
            {
              'start': 3,
              'end': 4,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 4,
              'lastColumn': 5,
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'children': [
                {
                  'start': 3,
                  'end': 4,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 4,
                  'lastColumn': 5,
                  'symbol': 'Match',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 3,
                      'end': 4,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 4,
                      'lastColumn': 5,
                      'symbol': 'MatchItem',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 3,
                          'end': 4,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 4,
                          'lastColumn': 5,
                          'token': 'char',
                          'type': 'token',
                          'text': 'z'
                        }
                      ],
                      'ruleIndex': 17,
                      'internalRuleIndex': 30,
                      'id': 12
                    }
                  ],
                  'ruleIndex': 16,
                  'internalRuleIndex': 27,
                  'id': 11
                }
              ],
              'ruleIndex': 6,
              'internalRuleIndex': 11,
              'id': 10
            },
            {
              'start': 4,
              'end': 5,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 5,
              'lastColumn': 6,
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'children': [
                {
                  'start': 4,
                  'end': 5,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 5,
                  'lastColumn': 6,
                  'symbol': 'Anchor',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 4,
                      'end': 5,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 5,
                      'lastColumn': 6,
                      'token': '$',
                      'type': 'token',
                      'text': '$'
                    }
                  ],
                  'internalRuleIndex': 68,
                  'id': 14
                }
              ],
              'ruleIndex': 8,
              'internalRuleIndex': 13,
              'id': 13
            }
          ],
          'ruleIndex': 5,
          'internalRuleIndex': 10,
          'id': 4
        }
      ],
      'ruleIndex': 3,
      'internalRuleIndex': 6,
      'id': 3
    }
  ],
  'ruleIndex': 1,
  'internalRuleIndex': 1,
  'id': 2
}"
`;

exports[`regexp parser works for a{1,2} 1`] = `
"{
  'start': 0,
  'end': 6,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 7,
  'symbol': 'Regexp',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 6,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 7,
      'symbol': 'Expression',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 6,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 7,
          'symbol': 'SubExpression',
          'type': 'symbol',
          'children': [
            {
              'start': 0,
              'end': 6,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 1,
              'lastColumn': 7,
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'children': [
                {
                  'start': 0,
                  'end': 6,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 1,
                  'lastColumn': 7,
                  'symbol': 'Match',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 0,
                      'end': 1,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 1,
                      'lastColumn': 2,
                      'symbol': 'MatchItem',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 0,
                          'end': 1,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 1,
                          'lastColumn': 2,
                          'token': 'char',
                          'type': 'token',
                          'text': 'a'
                        }
                      ],
                      'ruleIndex': 17,
                      'internalRuleIndex': 30,
                      'id': 7
                    },
                    {
                      'start': 1,
                      'end': 6,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 2,
                      'lastColumn': 7,
                      'symbol': 'Quantifier',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 1,
                          'end': 6,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 2,
                          'lastColumn': 7,
                          'symbol': 'QuantifierType',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 1,
                              'end': 2,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 2,
                              'lastColumn': 3,
                              'token': '{',
                              'type': 'token',
                              'text': '{'
                            },
                            {
                              'start': 2,
                              'end': 3,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 3,
                              'lastColumn': 4,
                              'token': 'int',
                              'type': 'token',
                              'text': '1'
                            },
                            {
                              'start': 3,
                              'end': 4,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 4,
                              'lastColumn': 5,
                              'token': ',',
                              'type': 'token',
                              'text': ','
                            },
                            {
                              'start': 4,
                              'end': 5,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 5,
                              'lastColumn': 6,
                              'token': 'int',
                              'type': 'token',
                              'text': '2'
                            },
                            {
                              'start': 5,
                              'end': 6,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 6,
                              'lastColumn': 7,
                              'token': '}',
                              'type': 'token',
                              'text': '}'
                            }
                          ],
                          'ruleIndex': 43,
                          'internalRuleIndex': 58,
                          'id': 9
                        }
                      ],
                      'ruleIndex': 38,
                      'internalRuleIndex': 53,
                      'id': 8
                    }
                  ],
                  'ruleIndex': 16,
                  'internalRuleIndex': 27,
                  'id': 6
                }
              ],
              'ruleIndex': 6,
              'internalRuleIndex': 11,
              'id': 5
            }
          ],
          'ruleIndex': 5,
          'internalRuleIndex': 10,
          'id': 4
        }
      ],
      'ruleIndex': 3,
      'internalRuleIndex': 6,
      'id': 3
    }
  ],
  'ruleIndex': 1,
  'internalRuleIndex': 2,
  'id': 2
}"
`;

exports[`regexp parser works for a{1} 1`] = `
"{
  'start': 0,
  'end': 4,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 5,
  'symbol': 'Regexp',
  'type': 'symbol',
  'children': [
    {
      'start': 0,
      'end': 4,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 5,
      'symbol': 'Expression',
      'type': 'symbol',
      'children': [
        {
          'start': 0,
          'end': 4,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 5,
          'symbol': 'SubExpression',
          'type': 'symbol',
          'children': [
            {
              'start': 0,
              'end': 4,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 1,
              'lastColumn': 5,
              'symbol': 'ExpressionItem',
              'type': 'symbol',
              'children': [
                {
                  'start': 0,
                  'end': 4,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 1,
                  'lastColumn': 5,
                  'symbol': 'Match',
                  'type': 'symbol',
                  'children': [
                    {
                      'start': 0,
                      'end': 1,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 1,
                      'lastColumn': 2,
                      'symbol': 'MatchItem',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 0,
                          'end': 1,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 1,
                          'lastColumn': 2,
                          'token': 'char',
                          'type': 'token',
                          'text': 'a'
                        }
                      ],
                      'ruleIndex': 17,
                      'internalRuleIndex': 30,
                      'id': 7
                    },
                    {
                      'start': 1,
                      'end': 4,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 2,
                      'lastColumn': 5,
                      'symbol': 'Quantifier',
                      'type': 'symbol',
                      'children': [
                        {
                          'start': 1,
                          'end': 4,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 2,
                          'lastColumn': 5,
                          'symbol': 'QuantifierType',
                          'type': 'symbol',
                          'children': [
                            {
                              'start': 1,
                              'end': 2,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 2,
                              'lastColumn': 3,
                              'token': '{',
                              'type': 'token',
                              'text': '{'
                            },
                            {
                              'start': 2,
                              'end': 3,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 3,
                              'lastColumn': 4,
                              'token': 'int',
                              'type': 'token',
                              'text': '1'
                            },
                            {
                              'start': 3,
                              'end': 4,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 4,
                              'lastColumn': 5,
                              'token': '}',
                              'type': 'token',
                              'text': '}'
                            }
                          ],
                          'ruleIndex': 43,
                          'internalRuleIndex': 58,
                          'id': 9
                        }
                      ],
                      'ruleIndex': 38,
                      'internalRuleIndex': 53,
                      'id': 8
                    }
                  ],
                  'ruleIndex': 16,
                  'internalRuleIndex': 27,
                  'id': 6
                }
              ],
              'ruleIndex': 6,
              'internalRuleIndex': 11,
              'id': 5
            }
          ],
          'ruleIndex': 5,
          'internalRuleIndex': 10,
          'id': 4
        }
      ],
      'ruleIndex': 3,
      'internalRuleIndex': 6,
      'id': 3
    }
  ],
  'ruleIndex': 1,
  'internalRuleIndex': 2,
  'id': 2
}"
`;
